<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_v2whitelist_settings">
        <!-- Manage Subscriptions -->
        <Preference
            android:key="pref_manage_custom_subs"
            android:summary="@string/summary_pref_manage_subs"
            android:title="@string/title_pref_manage_subs" />

    </PreferenceCategory>

    <!-- SmartConnect — разворачивается -->
    <PreferenceCategory
        android:title="@string/title_smartconnect_settings"
        app:initialExpandedChildrenCount="0">

        <!-- SmartConnect Server Chunking -->
        <EditTextPreference
            android:inputType="number"
            android:key="pref_chunk_size"
            android:defaultValue="20"
            android:summary="@string/summary_pref_chunk_size"
            android:title="@string/title_pref_chunk_size" />

        <ListPreference
            android:defaultValue="equal"
            android:entries="@array/chunk_preset_entries"
            android:entryValues="@array/chunk_preset_values"
            android:key="pref_chunk_preset"
            android:summary="%s"
            android:title="@string/title_pref_chunk_preset" />

    </PreferenceCategory>

    <!-- Ядро сканера v2w-core — разворачивается -->
    <PreferenceCategory
        android:title="@string/title_v2w_core_settings"
        app:initialExpandedChildrenCount="0">

        <CheckBoxPreference
            android:key="pref_v2w_core_enabled"
            android:defaultValue="false"
            android:summary="@string/summary_pref_v2w_core_enabled"
            android:title="@string/title_pref_v2w_core_enabled" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_v2w_core_concurrency"
            android:defaultValue="35"
            android:summary="@string/summary_pref_v2w_core_concurrency"
            android:title="@string/title_pref_v2w_core_concurrency" />

    </PreferenceCategory>

    <!-- Проверка профиля — разворачивается -->
    <PreferenceCategory
        android:title="@string/title_profile_check_settings"
        app:initialExpandedChildrenCount="0">

        <!-- Включить проверку профиля перед подключением -->
        <CheckBoxPreference
            android:key="pref_profile_check_enabled"
            android:defaultValue="true"
            android:summary="@string/summary_pref_profile_check"
            android:title="@string/title_pref_profile_check" />

        <!-- Тест скорости в составе проверки -->
        <CheckBoxPreference
            android:key="pref_profile_speed_check_enabled"
            android:defaultValue="true"
            android:summary="@string/summary_pref_profile_speed_check"
            android:title="@string/title_pref_profile_speed_check" />

        <!-- Объём загрузки для замера скорости -->
        <EditTextPreference
            android:inputType="number"
            android:key="pref_profile_speed_check_bytes"
            android:defaultValue="2000000"
            android:summary="@string/summary_pref_profile_speed_check_bytes"
            android:title="@string/title_pref_profile_speed_check_bytes" />

        <!-- Таймаут теста скорости, мс -->
        <EditTextPreference
            android:inputType="number"
            android:key="pref_profile_speed_check_timeout_ms"
            android:defaultValue="8000"
            android:summary="@string/summary_pref_profile_speed_check_timeout"
            android:title="@string/title_pref_profile_speed_check_timeout" />

        <!-- Минимальная скорость, Мбит/с -->
        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="pref_profile_min_speed_mbps"
            android:defaultValue="1.0"
            android:summary="@string/summary_pref_profile_min_speed_mbps"
            android:title="@string/title_pref_profile_min_speed_mbps" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_v2whitelist_settings_misc">
        <EditTextPreference
            android:inputType="number"
            android:key="pref_vip_cache_limit"
            android:defaultValue="5"
            android:summary="@string/summary_pref_vip_cache_limit"
            android:title="@string/title_pref_vip_cache_limit" />

        <!-- Auto failover -->
        <CheckBoxPreference
            android:key="pref_auto_failover"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_failover"
            android:title="@string/title_pref_auto_failover" />

        <!-- Bypass RU Apps -->
        <CheckBoxPreference
            android:key="pref_bypass_ru_apps"
            android:defaultValue="true"
            android:summary="@string/summary_pref_bypass_ru_apps"
            android:title="@string/title_pref_bypass_ru_apps" />

        <!-- Auto Check App Updates -->
        <CheckBoxPreference
            android:key="pref_auto_check_update"
            android:defaultValue="true"
            android:summary="@string/summary_pref_auto_check_update"
            android:title="@string/title_pref_auto_check_update" />

        <!-- Custom Endpoint (Proxy Chain) -->
        <CheckBoxPreference
            android:key="pref_custom_endpoint_enabled"
            android:summary="@string/summary_pref_custom_endpoint_enabled"
            android:title="@string/title_pref_custom_endpoint_enabled" />

        <EditTextPreference
            android:key="pref_custom_endpoint_url"
            android:summary="@string/summary_pref_custom_endpoint_url"
            android:title="@string/title_pref_custom_endpoint_url" />

        <EditTextPreference
            android:key="pref_custom_user_agent"
            android:summary="@string/summary_pref_custom_user_agent"
            android:title="@string/title_pref_custom_user_agent" />

        <CheckBoxPreference
            android:key="pref_check_update_pre_release"
            android:defaultValue="false"
            android:summary="@string/summary_pref_check_update_pre_release"
            android:title="@string/title_pref_check_update_pre_release" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_sub_setting"
        app:initialExpandedChildrenCount="0">
        <CheckBoxPreference
            android:key="pref_auto_update_subscription"
            android:summary="@string/summary_pref_auto_update_subscription"
            android:title="@string/title_pref_auto_update_subscription" />
        <EditTextPreference
            android:inputType="number"
            android:key="pref_auto_update_interval"
            android:summary="60"
            android:title="@string/title_pref_auto_update_interval" />
        <Preference
            android:key="pref_check_update_now"
            android:summary="@string/summary_pref_check_update_now"
            android:title="@string/title_pref_check_update_now" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_ui_settings">
        <CheckBoxPreference
            android:key="pref_speed_enabled"
            android:summary="@string/summary_pref_speed_enabled"
            android:title="@string/title_pref_speed_enabled" />

        <CheckBoxPreference
            android:key="pref_confirm_remove"
            android:summary="@string/summary_pref_confirm_remove"
            android:title="@string/title_pref_confirm_remove" />

        <CheckBoxPreference
            android:key="pref_start_scan_immediate"
            android:summary="@string/summary_pref_start_scan_immediate"
            android:title="@string/title_pref_start_scan_immediate" />

        <CheckBoxPreference
            android:key="pref_double_column_display"
            android:summary="@string/summary_pref_double_column_display"
            android:title="@string/title_pref_double_column_display" />

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/language_select"
            android:entryValues="@array/language_select_value"
            android:key="pref_language"
            android:summary="%s"
            android:title="@string/title_language" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/ui_mode_night"
            android:entryValues="@array/ui_mode_night_value"
            android:key="pref_ui_mode_night"
            android:summary="%s"
            android:title="@string/title_pref_ui_mode_night" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_split_tunneling">

        <CheckBoxPreference
            android:key="pref_per_app_proxy"
            android:summary="@string/summary_pref_per_app_proxy"
            android:title="@string/title_pref_per_app_proxy" />

        <Preference
            android:key="pref_per_app_proxy_settings"
            android:summary="@string/summary_pref_per_app_proxy_settings"
            android:title="@string/title_pref_per_app_proxy_settings" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_vpn_settings">
        <CheckBoxPreference
            android:key="pref_prefer_ipv6"
            android:summary="@string/summary_pref_prefer_ipv6"
            android:title="@string/title_pref_prefer_ipv6" />


        <CheckBoxPreference
            android:key="pref_local_dns_enabled"
            android:summary="@string/summary_pref_local_dns_enabled"
            android:title="@string/title_pref_local_dns_enabled" />

        <CheckBoxPreference
            android:key="pref_fake_dns_enabled"
            android:summary="@string/summary_pref_fake_dns_enabled"
            android:title="@string/title_pref_fake_dns_enabled" />

        <CheckBoxPreference
            android:key="pref_append_http_proxy"
            android:summary="@string/summary_pref_append_http_proxy"
            android:title="@string/title_pref_append_http_proxy" />

<!--        <EditTextPreference-->
<!--            android:inputType="number"-->
<!--            android:key="pref_local_dns_port"-->
<!--            android:summary="10853"-->
<!--            android:title="@string/title_pref_local_dns_port" />-->

        <EditTextPreference
            android:key="pref_vpn_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_vpn_dns" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/vpn_bypass_lan"
            android:entryValues="@array/vpn_bypass_lan_value"
            android:key="pref_vpn_bypass_lan"
            android:summary="%s"
            android:title="@string/title_pref_vpn_bypass_lan" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/vpn_interface_address"
            android:entryValues="@array/vpn_interface_address_value"
            android:key="pref_vpn_interface_address_config_index"
            android:summary="%s"
            android:title="@string/title_pref_vpn_interface_address" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_vpn_mtu"
            android:summary="1500"
            android:title="@string/title_pref_vpn_mtu" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_core_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sniffing_enabled"
            android:summary="@string/summary_pref_sniffing_enabled"
            android:title="@string/title_pref_sniffing_enabled" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_route_only_enabled"
            android:summary="@string/summary_pref_route_only_enabled"
            android:title="@string/title_pref_route_only_enabled" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_proxy_sharing_enabled"
            android:summary="@string/summary_pref_proxy_sharing_enabled"
            android:title="@string/title_pref_proxy_sharing_enabled" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_allow_insecure"
            android:summary="@string/summary_pref_allow_insecure"
            android:title="@string/title_pref_allow_insecure" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_socks_port"
            android:summary="10808"
            android:title="@string/title_pref_socks_port" />

        <EditTextPreference
            android:key="pref_remote_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_remote_dns" />

        <EditTextPreference
            android:key="pref_domestic_dns"
            android:summary="@string/summary_pref_domestic_dns"
            android:title="@string/title_pref_domestic_dns" />

        <EditTextPreference
            android:key="pref_dns_hosts"
            android:summary="@string/summary_pref_dns_hosts"
            android:title="@string/title_pref_dns_hosts" />

        <ListPreference
            android:defaultValue="warning"
            android:entries="@array/core_loglevel"
            android:entryValues="@array/core_loglevel"
            android:key="pref_core_loglevel"
            android:summary="%s"
            android:title="@string/title_core_loglevel" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/outbound_domain_resolve_method"
            android:entryValues="@array/outbound_domain_resolve_method_value"
            android:key="pref_outbound_domain_resolve_method"
            android:summary="%s"
            android:title="@string/title_outbound_domain_resolve_method" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_mux_settings"
        app:initialExpandedChildrenCount="0">
        <CheckBoxPreference
            android:key="pref_mux_enabled"
            android:summary="@string/summary_pref_mux_enabled"
            android:title="@string/title_pref_mux_enabled" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_mux_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_concurency" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_mux_xudp_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_xudp_concurency" />

        <ListPreference
            android:defaultValue="reject"
            android:entries="@array/mux_xudp_quic_entries"
            android:entryValues="@array/mux_xudp_quic_value"
            android:key="pref_mux_xudp_quic"
            android:summary="%s"
            android:title="@string/title_pref_mux_xudp_quic" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_fragment_settings"
        app:initialExpandedChildrenCount="0">
        <CheckBoxPreference
            android:key="pref_fragment_enabled"
            android:title="@string/title_pref_fragment_enabled" />

        <EditTextPreference
            android:key="pref_fragment_length"
            android:summary="50-100"
            android:title="@string/title_pref_fragment_length" />

        <EditTextPreference
            android:key="pref_fragment_interval"
            android:summary="10-20"
            android:title="@string/title_pref_fragment_interval" />

        <ListPreference
            android:defaultValue="tlshello"
            android:entries="@array/fragment_packets"
            android:entryValues="@array/fragment_packets"
            android:key="pref_fragment_packets"
            android:summary="%s"
            android:title="@string/title_pref_fragment_packets" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_advanced">

        <CheckBoxPreference
            android:key="pref_is_booted"
            android:summary="@string/summary_pref_is_booted"
            android:title="@string/title_pref_is_booted" />

        <CheckBoxPreference
            android:key="pref_auto_remove_invalid_after_test"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_remove_invalid_after_test"
            android:title="@string/title_pref_auto_remove_invalid_after_test" />

        <CheckBoxPreference
            android:key="pref_auto_sort_after_test"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_sort_after_test"
            android:title="@string/title_pref_auto_sort_after_test" />

        <EditTextPreference
            android:key="pref_delay_test_url"
            android:summary="@string/summary_pref_delay_test_url"
            android:title="@string/title_pref_delay_test_url" />

        <EditTextPreference
            android:key="pref_ip_api_url"
            android:summary="@string/summary_pref_ip_api_url"
            android:title="@string/title_pref_ip_api_url" />

        <ListPreference
            android:defaultValue="VPN"
            android:entries="@array/mode_entries"
            android:entryValues="@array/mode_value"
            android:key="pref_mode"
            android:summary="%s"
            android:title="@string/title_mode" />

        <Preference
            android:key="pref_logcat"
            android:summary="@string/summary_pref_logcat"
            android:title="@string/title_pref_logcat" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_backup_restore">
        <Preference
            android:key="pref_export_data"
            android:summary="@string/summary_export_data"
            android:title="@string/title_export_data" />

        <Preference
            android:key="pref_import_data"
            android:summary="@string/summary_import_data"
            android:title="@string/title_import_data" />
    </PreferenceCategory>

</PreferenceScreen>